rewrite FPN and Context Module

--- a/report/AIML425_project.tex
+++ b/report/AIML425_project.tex
@@ -87,83 +87,48 @@ The balancing factor, \( \alpha_t \), can be adjusted to counterbalance the sign
 
 In essence, the Focal Loss prevents models from being swamped by numerous easy negatives, enabling detectors like RetinaNet to reach top-tier performance by surmounting one of their primary challenges. This dynamic loss scaling, emphasizing challenging samples, has been a transformative innovation in object detection, especially beneficial in contexts with pronounced class imbalances.
 
-\subsection{feature pyramid network (FPN)}
+\subsection{Feature Pyramid Network (FPN)}
 
-In traditional computer vision, pyramids were used to process images at multiple scales to detect objects of varying sizes.
-Deep convolutional neural networks (CNNs) inherently produce feature maps at different resolutions, with shallow layers capturing high-resolution but semantically weak features and deep layers capturing low-resolution but semantically strong features.
-FPN \cite{lin2017feature} aims to leverage these multi-scale features effectively for object detection.
+Historically, image pyramids in computer vision processed images at multiple scales to detect objects of varying sizes. Deep convolutional neural networks (CNNs) naturally produce feature maps at diverse resolutions: shallow layers capture high-resolution yet semantically weak features, while deep layers capture semantically rich features at a lower resolution. FPN \cite{lin2017feature} capitalizes on these multi-scale features for enhanced object detection.
 
-It consists of the following parts.
+The FPN architecture comprises:
 
-\begin{enumerate}
-  \item Bottom-up Pathway:
-  
-    This is the standard forward pass in a CNN. As you go deeper into the network, the spatial resolution of the feature maps decreases, but the semantic information increases.
+\textbf{Bottom-up Pathway:} The standard forward pass in a CNN, where deeper layers offer increased semantic richness at the cost of spatial resolution.
 
-  \item Top-down Pathway and Lateral Connections:
-  
-    - FPN introduces a top-down pathway where the spatial resolution is upsampled.
+\textbf{Top-down Pathway and Lateral Connections:} FPN introduces a top-down approach, upsampling spatial resolution. During this, lateral connections from the bottom-up pathway are integrated. These connections merge feature maps from the bottom-up pathway with upsampled features, amalgamating high-level semantic details with fine spatial information.
 
-    - During this upsampling, FPN also adds lateral connections from the bottom-up pathway. These lateral connections are feature maps from the same level in the bottom-up pathway, which are merged with the upsampled features.
-    
-    - This merging process combines high-level semantic information from the top-down pathway with detailed spatial information from the bottom-up pathway.
-  
-  \item Multi-scale Predictions:
-    
-    With the combined features at different levels of the pyramid, FPN can make predictions at multiple scales. This allows for the detection of objects of varying sizes with high accuracy.
+\textbf{Multi-scale Predictions:} Leveraging the unified features across the pyramid, FPN facilitates predictions at varied scales, adeptly detecting objects of diverse sizes.
 
-  \item Benefits:
-  
-    - Improved Detection Across Scales: Traditional CNNs often struggled with detecting small objects because the feature maps in deeper layers, which have strong semantic information, are of low resolution. FPN addresses this by combining low-resolution, semantically strong features with high-resolution, semantically weak features.
+\textbf{Benefits:} FPN ameliorates traditional CNN limitations, especially in detecting smaller objects. By fusing low-resolution, semantically potent features with high-resolution, semantically weaker ones, detection across scales is enhanced. Furthermore, FPN constructs a feature pyramid from a single-scale image, optimizing computational efficiency.
 
-    - Efficiency: Instead of processing the image at multiple scales separately, FPN efficiently constructs a feature pyramid from a single-scale image, reducing computational overhead.
+\textbf{Usage in Modern Architectures:} Serving as a cornerstone in many cutting-edge object detection architectures, including RetinaNet, FPN's multi-scale feature representations bolster a detector's capability to identify objects across sizes.
 
-  \item Usage in Modern Architectures:
-  
-    FPN has become a foundational component in many state-of-the-art object detection architectures, including RetinaNet. By providing multi-scale feature representations, it enhances the detector's ability to recognize objects of various sizes.
-
-\end{enumerate}
-
-Feature Pyramid Network (FPN) is a pivotal advancement in object detection, addressing the challenge of detecting objects across different scales. By integrating multi-scale feature representations in a unified architecture, FPN enhances both the accuracy and efficiency of object detectors.
+In essence, the Feature Pyramid Network (FPN) signifies a monumental stride in object detection, addressing multi-scale object detection challenges. By cohesively integrating multi-scale feature representations, FPN augments both the precision and efficiency of object detectors.
 
 
-\subsection{Anchor based Face Deteciton on pyramid network}
+\subsection{Anchor-based Face Detection on Pyramid Network}
 
-In RetinaFace, the anchors are indeed densely tiled across the feature maps of each pyramid level, such as P2. However, the anchors don't predict for every single pixel in the sense of moving pixel by pixel. Instead, they are associated with the spatial locations on the feature map, and their density is determined by the stride of that particular pyramid level.
+In RetinaFace, anchors are densely arranged across the feature maps of pyramid levels like P2. However, rather than predicting on a pixel-by-pixel basis, anchors correspond to spatial locations on the feature map, with their density governed by the stride of the pyramid level.
 
-Let's break this down:
+Each pyramid level's stride signifies the spatial resolution disparity between the original image and its feature map. For example, a stride of 4 for P2 implies each of its spatial locations corresponds to a 4x4 region in the original image. At each spatial location on a feature map, multiple anchors of varied scales and aspect ratios are positioned. This means that at a specific x,y location on P2, there exist multiple anchors, each differing in size or shape.
 
-\begin{enumerate}
-  \item Stride: Each pyramid level has an associated stride, which indicates the spatial resolution difference between the original image and the feature map at that level. For instance, if P2 has a stride of 4, it means each spatial location in the P2 feature map corresponds to a 4x4 region in the original image.
-  \item Anchor Tiling: For each spatial location on a feature map (e.g., P2), multiple anchors of different scales and aspect ratios are tiled. So, if you're at a specific x,y location on P2, there will be multiple anchors centered at that location, each with a different size or shape.
-  \item Dense Sampling: While the anchors are densely sampled, they aren't associated with every pixel of the original image. Instead, they are associated with the spatial locations of the feature map. Using the P2 example with a stride of 4: for the first spatial location (top-left), the anchors might be centered at pixel (2,2) of the original image (assuming the anchor's center is at the middle of the 4x4 region). The next set of anchors on P2 would be centered at pixel (6,2), and so on.
-  \item Coverage: Even though the anchors aren't predicting for every single pixel, the combination of multiple scales and aspect ratios ensures that they can potentially cover all objects (faces, in the case of RetinaFace) in the image. The dense tiling, combined with the varying sizes and shapes of the anchors, allows the model to detect faces of different sizes and orientations.
-\end{enumerate}
-In summary, while RetinaFace does densely tile anchors across the feature maps of each pyramid level, it doesn't predict for every pixel in a pixel-by-pixel manner. Instead, the predictions are made for spatial locations on the feature map, with the density determined by the stride of the pyramid level.
+While anchors densely populate the feature map, they don't correspond to every pixel of the original image. They relate to the feature map's spatial locations. For instance, with P2's stride of 4, the first set of anchors might center at pixel (2,2) of the original image, with subsequent sets at pixels like (6,2), and so forth.
+
+Despite not predicting for each pixel, the amalgamation of diverse scales and aspect ratios ensures comprehensive coverage of all potential objects. This dense arrangement, coupled with the anchors' varied dimensions, equips the model to detect faces of multiple sizes and orientations.
+
+In essence, RetinaFace's dense anchor tiling across pyramid feature maps doesn't operate on a strict pixel-by-pixel basis. Predictions are tethered to feature map spatial locations, with the density influenced by the pyramid level's stride.
 
 \subsection{Context Module in RetinaFace}
 
-The "context module" is a significant component of the RetinaFace architecture.
+The context module stands as a pivotal component within the RetinaFace architecture, designed to harness contextual information across various feature levels. Multi-level feature fusion, prevalent in many face detection architectures, is employed to cater to faces of diverse sizes and contexts. By aggregating context from different scales, the context module bolsters the feature representation, proving invaluable for detecting small faces or those in challenging scenarios where context offers crucial insights.
 
-The context module in RetinaFace is designed to capture contextual information from different feature levels. In many face detection architectures, multi-level feature fusion is a common strategy to handle faces of various sizes and in different scenarios. The context module in RetinaFace aims to enhance the feature representation by aggregating context from different scales.
-
-\begin{enumerate}
-  \item Multi-level Feature Aggregation: The context module takes features from different levels of the network. These features come from various resolutions, capturing both high-level and low-level details.
-  \item Feature Enhancement: By aggregating these multi-level features, the context module can enhance the representation of each feature level. This is particularly useful for detecting small faces or faces in challenging scenarios where contextual information can provide additional clues.
-  \item Improved Detection Performance: The inclusion of the context module in RetinaFace helps in achieving better detection performance, especially in scenarios where faces are partially occluded, are of varying sizes, or are in challenging lighting conditions.
-\end{enumerate}
-
-In essence, the context module serves as a mechanism to integrate and leverage information from different scales, enhancing the robustness and accuracy of the RetinaFace detector in diverse real-world scenarios.
+This module's integration results in enhanced detection performance, especially in situations with partial occlusions, varying face sizes, or challenging lighting. Essentially, the context module acts as a conduit to assimilate and capitalize on information from different scales, fortifying the RetinaFace detector's precision and robustness across varied real-world settings.
 
 \subsubsection{How Context Module works with FPN}
 
-\begin{enumerate}
-  \item Feature Aggregation: The context module takes the multi-scale features provided by the FPN and further refines them by aggregating context. This can be thought of as a two-step enhancement: first, the FPN provides features at multiple scales, and then the context module refines these features by considering broader contextual information.
-  \item Improved Detection: By combining the strengths of FPN and the context module, RetinaFace achieves a richer feature representation. This enhanced representation is more robust and versatile, allowing the model to detect faces with higher accuracy, especially in challenging scenarios.
-\end{enumerate}
+The context module refines the multi-scale features furnished by the FPN by aggregating context, offering a dual enhancement. Initially, the FPN delivers multi-scale features, which the context module subsequently refines by integrating broader contextual data. This synergy between the FPN and the context module culminates in a richer feature representation for RetinaFace, making it more resilient and adept at face detection, particularly in demanding scenarios.
 
-In summary, while the FPN in RetinaFace provides a multi-scale feature representation, the context module further refines these features by aggregating contextual information. The combination of these two components results in a powerful and robust face detection mechanism.
-
+In a nutshell, while RetinaFace's FPN provides multi-scale feature representation, the context module further amplifies these features by incorporating contextual information, resulting in a potent face detection mechanism.
 
 \subsection{Cascade Regression}
 
