--- a/report/AIML425_project.tex
+++ b/report/AIML425_project.tex
@@ -148,16 +148,16 @@ Within RetinaFace, cascade regression refines bounding box predictions iterative
 
 \section{Impact}
 
-The "RetinaFace: Single-shot Multi-level Face Localisation in the Wild" paper has significantly influenced the domain of face detection. Its contributions have paved the way for a plethora of subsequent research endeavors. This section delves into the multifaceted impact of RetinaFace on the research community.
+The publication "RetinaFace: Single-shot Multi-level Face Localisation in the Wild" has left an indelible mark on face detection research, catalyzing numerous subsequent investigations.
 
 \subsection{Improving the Architecture}
-The foundational architecture of RetinaFace has not only been influential in human face detection but has also been adapted for other species. A remarkable adaptation is presented by \cite{xu2022cattlefacenet}, titled "CattleFaceNet: A cattle face identification approach based on RetinaFace and ArcFace loss." This research innovatively leverages the strengths of RetinaFace for cattle face identification, integrating it with the ArcFace loss to enhance recognition accuracy. Such adaptations underscore the versatility of the RetinaFace model and its potential to serve as a base for diverse identification tasks.
+RetinaFace's architecture, while pivotal in human face detection, has seen adaptations for other species. For instance, \cite{xu2022cattlefacenet} introduced "CattleFaceNet: A cattle face identification approach based on RetinaFace and ArcFace loss," which melds RetinaFace's strengths with the ArcFace loss for enhanced cattle face recognition. Such innovative applications highlight the model's versatility across varied identification challenges.
 
 \subsection{Adapting to Different Domains}
-The adaptability of RetinaFace is showcased by its application in various unique scenarios beyond traditional face detection. A significant example is the study by \cite{aswal2020single}, titled "Single Camera Masked Face Identification." This research emphasizes the challenges and nuances of identifying faces when obscured by masks, a scenario that has become increasingly relevant in recent times. It demonstrates the flexibility of the RetinaFace model to cater to domain-specific challenges and its potential to address contemporary issues.
+RetinaFace's adaptability shines in its applications across diverse scenarios. A pertinent example is \cite{aswal2020single}'s "Single Camera Masked Face Identification," addressing the complexities of identifying mask-obscured faces, a contemporary challenge. This underscores RetinaFace's ability to navigate domain-specific intricacies.
 
 \subsection{Optimization for Real-time Applications}
-The need for real-time face detection, especially in resource-constrained environments, has driven researchers to optimize RetinaFace for speed and efficiency. A notable contribution in this domain is the work by \cite{putro2022faster}, titled "A Faster Real-time Face Detector Support Smart Digital Advertising on Low-cost Computing Device." This research underscores the importance of efficient face detection in the realm of digital advertising, particularly on low-cost computing devices, further emphasizing the adaptability and potential of the RetinaFace model for real-world applications.
+Real-time face detection's importance, especially in constrained environments, has led to RetinaFace's optimization endeavors. \cite{putro2022faster}'s "A Faster Real-time Face Detector Support Smart Digital Advertising on Low-cost Computing Device" accentuates the model's significance in digital advertising on budget devices, underscoring its real-world applicability.
 
 \section{Fine tuning pretrained model}
 
